changed repository logic to hibernate. Also changed models id to UUID. Changed all other methods to match hibernate logic